--- a/trunk/testcase/test.html
+++ b/trunk/testcase/test.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>Css制作table细线表格</title>
-<style type="text/css" media="screen">
-<!-- /* PR-CSS */
-table {
-border-collapse:collapse; /* 关键属性：合并表格内外边框(其实表格边框有2px，外面1px，里面还有1px哦) */
-border:solid #999; /* 设置边框属性；样式(solid=实线)、颜色(#999=灰) */
-border-width:1px 0 0 1px; /* 设置边框状粗细：上 右 下 左 = 对应：1px 0 0 1px */
-} 
-table th,table td {border:solid #999;border-width:0 1px 1px 0;padding:2px;}
-tfoot td {text-align:center;}
--->
+<title></title>
+
+<style type="text/css">
+table,table td
+{
+	border-collapse:collapse;
+	border:solid black;
+	border-width:1 1px 1px 1;
+}
 </style>
+
 </head>
+
+
 <body>
+
 <table>
-<thead>
-<tr><th>名称</th><th>网址</th><th>时间</th></tr>
-</thead>
-<tbody>
-<tr><td>百度</td><td>http://www.baidu.com</td><td>2007.01.11</td></tr>
-<tr><td>百度</td><td>http://www.baidu.com</td><td>2007.01.11</td></tr>
-<tr><td>百度</td><td>http://www.baidu.com</td><td>2007.01.11</td></tr>
-</tbody>
-<tfoot>
-<tr><td colspan="3">下一页</td></tr>
-</tfoot>
+<tr>
+    <td>表单一</td><td>表单二</td>
+    <td>表单一</td><td colspan="2">表单二</td>
+</tr>
+
+<tr>
+
+    <td>表单三</td><td>表单四</td>
+    <td>表单三</td><td>表单四</td><td>表单四</td>
+</tr>
 </table>
+
 </body>
+
 </html>
